--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Miguel Angel Bribiesca Rodriguez
-description: A template for your AOS C111/204 project site.
+description: Final Project AOSC204.
 logo: /assets/IMG/template_logo.png
 show_downloads: true
-theme: jekyll-theme-modernist
+theme: architect-theme-modernist
