--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Miguel Angel Bribiesca Rodriguez
 description: Final Project AOSC204.
 logo: /assets/IMG/template_logo.png
 show_downloads: true
-theme: architect-theme-modernist
+theme: jekyll-theme-modernist
